<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".PostsUploadActivities.ReelsActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="New Reel" />

    <Button
        android:id="@+id/selectVideo"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/select_from_gallery"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectVideo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="30dp"
        android:hint="@string/write_a_caption"
        android:textColorHint="#000000"
        app:boxStrokeColor="#000"
        app:cursorColor="#000"
        app:hintTextColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar_buttons"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        app:layout_constraintStart_toStartOf="@+id/videoView"
        app:layout_constraintTop_toBottomOf="@+id/videoView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:shadowRadius="20"
            android:textColor="#000"
            android:textColorHint="#000"
            tools:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/bottom_bar_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:strokeColor="#000000" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/upload_reel"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNoVideo"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:gravity="center"
        android:background="@android:color/darker_gray"
        android:text="No video selected"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectVideo" />

</androidx.constraintlayout.widget.ConstraintLayout>