<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignup.Signup">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="110dp"
        android:src="@drawable/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/actor"
        android:text="Instagram"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/username"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:cursorColor="@color/black"
        app:cursorErrorColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:cursorColor="@color/black"
        app:cursorErrorColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/username"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="Password"
        app:boxStrokeColor="@color/black"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:cursorColor="@color/black"
        app:cursorErrorColor="@android:color/holo_red_dark"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:background="@drawable/login_btn_design"
        android:fontFamily="@font/actor"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/actor"
        android:text="OR"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/signupButton"
        app:layout_constraintStart_toStartOf="@+id/signupButton"
        app:layout_constraintTop_toBottomOf="@+id/signupButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fb_btn"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="56dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/actor"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="true"
        android:textColor="#006B8E"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/facebook"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/signupButton"
        app:layout_constraintStart_toStartOf="@+id/signupButton"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:strokeColor="#006B8E"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/actor"
            android:gravity="center"
            android:text="Already have an account?"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/actor"
            android:gravity="center"
            android:text="Login"
            android:textColor="#f95537"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>